--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -32,6 +32,13 @@ main
   margin: 20px 0 0
   padding-bottom: 20px
 
+  .content
+
+    .gallery img
+      margin: 20px
+
+
+
 
 footer
   background: #333333
